[package]
name = "n-mb"
authors = ["Djkáťo <djkatovfx@gmail.com>"]
version = "1.1.1"
edition = "2021"
description = "Simple ffmpeg wrapper to parse files to the most efficient formats within a set size"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/djkato/n-mb"
repository = "https://github.com/djkato/n-mb"
readme = "README.md"
keywords = ["media", "ffmpeg", "cli"]
categories = ["command-line-utilities"]
exclude = ["*.mp4", "*.mp3", "*.jpg", "*.ogg", "*.webp", "*.webm", "*.log"]

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.4", features = ["cargo"] }
indicatif = "0.17.7"
pbr = "1.1.1"
tokio = { version = "1.32.0", features = [
  "macros",
  "rt-multi-thread",
  "process",
  "io-std",
  "sync",
  "time",
  "io-util",
] }

[[bin]]
name = "nmb"
path = "src/main.rs"

[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
# strip = true      # Strip symbols from binary*
